src/views/Browse/Browse.scss
@import "../../styles/colors.scss";
@import "../../styles/fonts.scss";
@import "../../styles/mixins.scss";

.browse {
  @include container;
  position: relative;

  @include for-tablet-large-up {
    &:after {
      @include faded-background;
    }
  }

  &--subtitle {
    @include subtitle;
    color: $turqoise;
  }

  &--about {
    @include about;

    &--mobile {
      margin-top: space(32);
    }
  }

  &--filter {
    background-color: $light-ribienna;
    padding: space(16) !important;
    position: relative;

    @include for-phone-only {
      &:before {
        position: absolute;
        content: "";
        background-image: url("../../assets/lines/Line2-purple-mobile.svg");
        width: 100%;
        height: 22px;
        background-repeat: no-repeat;
        background-size: contain;
        bottom: -8px;
        left: 0;
      }
    }

    @include for-tablet-large-up {
      margin-top: space(120) !important;
      padding: space(32) space(6) !important;
    }

    &--title {
      @include heading-s;
      color: $ribienna;
      margin-bottom: space(32);

      @include for-phone-only {
        text-align: center;
        margin-bottom: space(16);
      }
    }

    &--input {
      display: flex;
    }

    &--options {
      &-toggle {
        font-size: pxtorem(20px);
        font-family: $skippy-sharp;
        text-decoration: underline;
        color: $ribienna;
        margin: space(16) 0;
      }
    }

    &--about {
      @include body-m;
      text-align: center;
      color: $grey;
    }

    &-no-tag {
      display: inline-block !important;
      margin-top: space(12) !important;

      &--title {
        @include body-m;
        color: $grey;
        margin-top: space(20);

        @include for-tablet-large-up {
          margin-right: space(16);
        }
      }

      &--container {
        margin-top: space(20);
      }
    }

    &--categories {
      margin-top: space(32);
    }
  }

  &--footer {
    padding: space(120) space(24) space(120) !important;
    justify-content: center !important;

    @include for-phone-only {
      padding-top: space(40) !important;
      padding-bottom: space(56) !important;
    }

    &--title {
      @include heading-m;
      color: $ribienna;
      margin-bottom: space(40);
    }

    &--content {
      @include body-l;
      color: $grey;
    }

    &--button {
      text-align: center;

      @include for-tablet-down {
        margin-top: space(40);
      }
    }
  }
}

.react-tags {
  @include body-m-alt;
  position: relative;
  padding: space(8) 0 0 space(8);
  border: 1px solid $ribienna;
  border-radius: 1px;
  display: inline;
  background-color: $white;
  width: 100%;

  /* clicking anywhere will focus the input */
  cursor: text;
}

.react-tags.is-focused {
  border-color: $medium-grey;
}

.react-tags__selected {
  display: inline;
}

.react-tags__selected-tag {
  @include tag-text;
  color: $ribienna;

  display: inline-block;
  box-sizing: border-box;
  margin: 0 space(8) space(8) 0;
  padding: space(8);
  border: 1px solid $ribienna;
  border-radius: 2px;
  background: $white;
}

.react-tags__selected-tag:after {
  content: "\2715";
  color: $ribienna;
  margin-left: space(8);
}

.react-tags__selected-tag:hover,
.react-tags__selected-tag:focus {
  cursor: pointer;
}

.react-tags__search {
  display: inline-block;

  /* match tag layout */
  padding: space(8) pxtorem(2px);
  margin-bottom: space(8);

  /* prevent autoresize overflowing the container */
  max-width: 100%;
}

.react-tags__search input {
  /* prevent autoresize overflowing the container */
  max-width: 100%;
  /* remove styles and layout from this element */
  margin: 0;
  padding: 0;
  border: 0;
  outline: none;

  /* match the font styles */
  font-size: inherit;
  line-height: inherit;
  color: $grey;
  width: 100%;

  &::placeholder {
    width: auto;
  }
}

.react-tags__search input::-ms-clear {
  display: none;
}

.react-tags__suggestions {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  padding: space(8) 0 0 space(8);
  border: 1px solid $ribienna;
  background: $white;
  z-index: 10;
}

.react-tags__suggestions ul {
  list-style: none;
  background: $white;
  display: flex;
  flex-wrap: wrap;
  justify-content: stretch;
}

.react-tags__suggestions li {
  border: 1px solid $ribienna;
  margin: 0 space(8) space(8) 0;
  padding: space(8);
  color: $ribienna;
}

.react-tags__suggestions li mark {
  text-decoration: underline;
  background: none;
  font-weight: 600;
  color: $ribienna;
}

